hphp/test/slow/modules/duplicate-module-1.php.expectf
Fatal error: Module already defined: A in %s on line 9
